[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yakit-analizi"
version = "0.1.0"
description = "Türkiye Akaryakıt Zam Öngörü Sistemi — Katman 1 Veri Toplama Servisi"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Yakıt Analizi Ekibi"},
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "yfinance>=0.2.50",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "python-dotenv>=1.0.1",
    "alembic>=1.14.0",
    # ML paketleri (Katman 4)
    "lightgbm>=4.3.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "shap>=0.46.0",
    "joblib>=1.3.0",
    "numba>=0.60.0",
    # Telegram Bot (Katman 5)
    "python-telegram-bot>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.34.0",
    "aiosqlite>=0.20.0",
    "coverage>=7.6.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
